<resources>
    <string name="app_name">초간단 계산기</string>
    <string name="action_settings">Settings</string>
    <string name="hint1">숫자1</string>
    <string name="hint2">숫자2</string>
    <string name="add">더하기</string>
    <string name="sub">빼기</string>
    <string name="mul">곱하기</string>
    <string name="div">나누기</string>
    <string name="rem">나머지</string>
    <string name="result">계산 결과 : </string>
</resources>
